Add GET /proc/search and remove GET /proc, GET /proc/title
