# server/docs/swagger.json
@@ -44,35 +44,6 @@
             }
         },
         "/proc": {
-            "get": {
-                "description": "list results of processes",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "list results",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "query limit; default: 5",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "process status; (pending|running|succeed|failed)",
-                        "name": "status",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handler.SuccessResponse-handler_ListProcessResponseData"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "start a pneutrinoutil process with given arguments",
                 "produces": [
@@ -176,13 +147,12 @@
                 }
             }
         },
-        "/proc/title": {
+        "/proc/search": {
             "get": {
-                "description": "find processes by title prefix",
+                "description": "search processes by status, created_at, title prefix, order by created_at",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "find processes by title prefix",
                 "parameters": [
                     {
                         "type": "integer",
@@ -194,15 +164,32 @@
                         "type": "string",
                         "description": "title prefix",
                         "name": "prefix",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "process status; (pending|running|succeed|failed)",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "created_at",
+                        "name": "start",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "created_at",
+                        "name": "end",
+                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.SuccessResponse-handler_ListProcessResponseData"
+                            "$ref": "#/definitions/handler.SuccessResponse-handler_SearchProcessResponseData"
                         }
                     }
                 }
@@ -515,13 +502,9 @@
                 }
             }
         },
-        "handler.ListProcessResponseDataElement": {
+        "handler.SearchProcessResponseDataElement": {
             "type": "object",
             "properties": {
-                "basename": {
-                    "description": "title",
-                    "type": "string"
-                },
                 "command": {
                     "type": "string"
                 },
@@ -537,12 +520,12 @@
                 "log_object_id": {
                     "type": "integer"
                 },
-                "result_object_id": {
-                    "type": "integer"
-                },
-                "rid": {
+                "request_id": {
                     "description": "request id, or just id",
                     "type": "string"
+                },
+                "result_object_id": {
+                    "type": "integer"
                 },
                 "score_object_id": {
                     "type": "integer"
@@ -551,6 +534,12 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -591,13 +580,13 @@
                 }
             }
         },
-        "handler.SuccessResponse-handler_ListProcessResponseData": {
+        "handler.SuccessResponse-handler_SearchProcessResponseData": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/handler.ListProcessResponseDataElement"
+                        "$ref": "#/definitions/handler.SearchProcessResponseDataElement"
                     }
                 },
                 "ok": {
